--- a/doublekit-project-h5-ce/package.json
+++ b/doublekit-project-h5-ce/package.json
@@ -84,8 +84,8 @@
         "babel-plugin-import": "^1.13.3",
         "core-js": "^3.21.1",
         "doublekit-core-h5": "0.0.0",
-        "doublekit-core-ui": "^1.0.0",
         "doublekit-portal-h5": "^1.0.0",
+        "doublekit-portal-ui": "^1.0.0",
         "doublekit-privilege-ui": "^1.0.0",
         "echarts": "^5.3.1",
         "i18next": "^19.8.4",
