--- a/tiklab-teamwire-h5-ce/package.json
+++ b/tiklab-teamwire-h5-ce/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "doublekit-project-h5-ce",
+    "name": "tiklab-teamwire-h5-ce",
     "version": "1.0.0",
-    "description": "doublekit project",
+    "description": "tiklab teamwire",
     "main": "es/dist.js",
     "files": [
         "es"
@@ -83,11 +83,6 @@
         "axios": "^0.21.0",
         "babel-plugin-import": "^1.13.3",
         "core-js": "^3.21.1",
-        "doublekit-core-h5": "0.0.0",
-        "doublekit-eam-ui": "^1.0.0",
-        "doublekit-portal-h5": "^1.0.0",
-        "doublekit-privilege-ui": "^1.0.0",
-        "doublekit-slate-h5-ui": "^1.0.0",
         "echarts": "^5.3.1",
         "i18next": "^19.8.4",
         "i18next-browser-languagedetector": "^6.0.1",
@@ -106,6 +101,10 @@
         "react-sortable-hoc": "^1.11.0",
         "sass-resources-loader": "^2.2.1",
         "start": "^5.1.0",
+        "tiklab-core-ui": "1.0.0",
+        "tiklab-eam-ui": "^1.0.0",
+        "tiklab-privilege-ui": "^1.0.0",
+        "tiklab-slate-h5-ui": "^1.0.1",
         "uuid": "^8.3.2"
     }
 }
