--- a/tiklab-teamwire-h5-ce/package.json
+++ b/tiklab-teamwire-h5-ce/package.json
@@ -64,6 +64,8 @@
         "sass-loader": "^7.3.1",
         "single-spa": "5.9.2",
         "single-spa-react": "4.1.1",
+        "svg-sprite-loader": "^6.0.11",
+        "svgo-loader": "^3.0.1",
         "style-loader": "^2.0.0",
         "terser-webpack-plugin": "^1.4.5",
         "thread-loader": "^3.0.4",
