--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "tiklab teamwire",
     "main": "es/src/ui.js",
-    "module": "es/index.js",
+    "module": "es/src/ui.js",
     "files": [
         "es"
     ],
@@ -44,24 +44,27 @@
         "mobx": "^5.15.4",
         "mobx-react": "^6.2.2",
         "moment": "^2.29.4",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.1",
+        "react": "^>=16.0.8",
+        "react-dom": "^>=16.0.8",
         "react-i18next": "^11.7.3",
         "react-router": "^5.2.0",
         "react-router-config": "^5.1.1",
         "react-router-dom": "^5.2.0",
         "svgo-loader": "^3.0.1",
-        "tiklab-core-ui": "^1.0.0",
-        "tiklab-eam-ui": "^1.0.0",
-        "tiklab-licence-ui": "^1.0.0",
-        "tiklab-message-ui": "^1.0.0",
-        "tiklab-plugin-ui": "^1.0.0",
-        "tiklab-privilege-ui": "^1.0.0",
-        "tiklab-slate-ui": "^1.0.1",
-        "tiklab-teamwire-widget": "^1.0.0",
-        "tiklab-user-ui": "^1.0.0",
-        "tiklab-flow-ui": "^1.0.0",
-        "tiklab-form-ui": "^1.0.0"
+        "tiklab-core-ui": "^1.0.1",
+        "tiklab-eam-saas-ui": ">=^1.0.1",
+        "tiklab-eam-ui": ">=^1.0.1",
+        "tiklab-flow-ui": ">=^1.0.1",
+        "tiklab-form-ui": ">=^1.0.1",
+        "tiklab-integration-ui": ">=^1.0.1",
+        "tiklab-licence-ui": ">=^1.0.1",
+        "tiklab-message-ui": ">=^1.0.1",
+        "tiklab-plugin-core-ui": ">=^1.0.1",
+        "tiklab-plugin-manager-ui": ">=^1.0.1",
+        "tiklab-user-ui": ">=^1.0.1",
+        "tiklab-security-ui": ">=^1.0.1",
+        "tiklab-slate-ui": ">=^1.0.0",
+        "tiklab-todotask-ui": ">=^1.0.1"
     },
     "devDependencies": {
         "@babel/cli": "^7.12.1",
@@ -184,6 +187,7 @@
         "react-router-config": "^5.1.1",
         "react-router-dom": "^5.2.0",
         "tiklab-core-ui": "^1.0.1",
+        "tiklab-eam-saas-ui": "^1.0.1",
         "tiklab-eam-ui": "^1.0.1",
         "tiklab-flow-ui": "^1.0.1",
         "tiklab-form-ui": "^1.0.1",
@@ -192,7 +196,6 @@
         "tiklab-message-ui": "^1.0.1",
         "tiklab-plugin-core-ui": "^1.0.1",
         "tiklab-plugin-manager-ui": "^1.0.1",
-        "tiklab-privilege-ui": "^1.0.1",
         "tiklab-security-ui": "^1.0.1",
         "tiklab-slate-ui": "^1.0.0",
         "tiklab-todotask-ui": "^1.0.1",
