--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
         "prod": "cross-env NODE_ENV=production API_ENV=prod webpack --config ./webpack.prod.js",
         "dev": "cross-env NODE_ENV=dev API_ENV=dev webpack-dev-server --progress  --config ./webpack.dev.js --open",
         "build": "rimraf es/* && ./node_modules/.bin/babel src --copy-files  --extensions .js --out-dir es/module && ncp ./src/ui.js es/dist.js && ncp README.md es/README.md && ncp package.publish.json es/package.json",
-        "build:widget": "rimraf eswidget/* && ./node_modules/.bin/babel src/modules/widget --copy-files  --extensions .js --out-dir eswidget/module && ncp ./src/widget.js eswidget/dist.js && ncp README.md eswidget/README.md && ncp package.widget.json eswidget/package.json",
         "build:dev": "npm run build:dev:esm && npm run build:dev:cjs && npm run build:umd && npm run build:css",
         "build:prod": "npm run build:esm && npm run build:cjs && npm run build:umd",
         "build:css": "cd scripts && gulp compile",
@@ -64,7 +63,10 @@
         "tiklab-user-ui": ">=^1.0.1",
         "tiklab-security-ui": ">=^1.0.1",
         "tiklab-slate-ui": ">=^1.0.0",
-        "tiklab-todotask-ui": ">=^1.0.1"
+        "tiklab-todotask-ui": ">=^1.0.1",
+        "slate": "^0.66.0",
+        "slate-history": "^0.65.3",
+        "slate-react": "^0.66.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.12.1",
@@ -190,7 +192,6 @@
         "react-router-config": "^5.1.1",
         "react-router-dom": "^5.2.0",
         "tiklab-core-ui": "^1.0.1",
-        "tiklab-eam-saas-ui": "^1.0.1",
         "tiklab-eam-ui": "^1.0.1",
         "tiklab-flow-ui": "^1.0.1",
         "tiklab-form-ui": "^1.0.1",
