--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
         "tiklab-user-ui": ">=^1.0.1",
         "tiklab-security-ui": ">=^1.0.1",
         "tiklab-slate-ui": ">=^1.0.0",
+        "tiklab-privilege-ui": "^1.0.1",
         "tiklab-todotask-ui": ">=^1.0.1",
         "slate": "^0.66.0",
         "slate-history": "^0.65.3",
@@ -200,6 +201,7 @@
         "tiklab-message-ui": "^1.0.1",
         "tiklab-plugin-core-ui": "^1.0.1",
         "tiklab-plugin-manager-ui": "^1.0.1",
+        "tiklab-privilege-ui": "^1.0.1",
         "tiklab-security-ui": "^1.0.1",
         "tiklab-slate-ui": "^1.0.1",
         "tiklab-todotask-ui": "^1.0.1",
