--- a/package.json
+++ b/package.json
@@ -177,9 +177,11 @@
         "antd": "4.15.2",
         "axios": "^0.21.0",
         "echarts": "^5.0.1",
+        "html2canvas": "^1.4.1",
         "i18next": "^19.8.4",
         "i18next-browser-languagedetector": "^6.0.1",
         "i18next-http-backend": "^1.0.21",
+        "jspdf": "^2.5.1",
         "mobx": "^5.15.4",
         "mobx-react": "^6.2.2",
         "prod": "^1.0.1",
