--- a/package.json
+++ b/package.json
@@ -122,7 +122,7 @@
         "node-forge": "*",
         "node-sass": "^5.0.0",
         "nodemon": "^2.0.6",
-        "optimize-css-assets-webpack-plugin": "^5.0.4",
+        "optimize-css-assets-webpack-plugin": "^5.0.8",
         "package-check-version": "^1.0.1",
         "postcss": "^8.1.7",
         "postcss-cssnext": "^3.1.1",
@@ -149,6 +149,9 @@
         "sass-resources-loader": "^2.2.1",
         "single-spa": "5.9.2",
         "single-spa-react": "4.1.1",
+        "slate": "^0.66.0",
+        "slate-history": "^0.65.3",
+        "slate-react": "^0.66.0",
         "style-loader": "^2.0.0",
         "svg-sprite-loader": "^6.0.11",
         "svgo-loader": "^3.0.1",
@@ -162,10 +165,7 @@
         "webpack-dev-server": "^3.11.0",
         "webpack-merge": "^5.4.0",
         "webpack-parallel-uglify-plugin": "^1.1.2",
-        "yarn": "^1.22.17",
-        "slate": "^0.66.0",
-        "slate-history": "^0.65.3",
-        "slate-react": "^0.66.0"
+        "yarn": "^1.22.17"
     },
     "dependencies": {
         "@ant-design/icons": "^4.3.0",
