--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "registry": "http://172.13.1.24:8080/repository/npm-hosted/"
     },
     "peerDependencies": {
-        "@ant-design/icons": "^4.3.0",
+        "@ant-design/icons": "4.3.0",
         "@antv/g6": "^4.1.4",
         "@antv/x6": "^1.12.5",
         "@antv/x6-react-components": "^1.1.1",
@@ -63,9 +63,9 @@
         "tiklab-slate-ui": ">=^1.0.0",
         "tiklab-privilege-ui": "^1.0.1",
         "tiklab-todotask-ui": ">=^1.0.1",
-        "slate": "^0.66.0",
-        "slate-history": "^0.65.3",
-        "slate-react": "^0.66.0"
+        "slate": "0.66.0",
+        "slate-history": "0.65.3",
+        "slate-react": "0.66.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.12.1",
@@ -166,7 +166,7 @@
         "yarn": "^1.22.17"
     },
     "dependencies": {
-        "@ant-design/icons": "^4.3.0",
+        "@ant-design/icons": "4.3.0",
         "@antv/g6": "^4.1.4",
         "@antv/x6": "^1.12.5",
         "@antv/x6-react-components": "^1.1.1",
