--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "start": "cross-env NODE_ENV=local API_ENV=local webpack-dev-server --progress --config ./webpack.dev.js ",
         "prod": "cross-env NODE_ENV=production API_ENV=prod webpack --config ./webpack.prod.js",
         "dev": "cross-env NODE_ENV=dev API_ENV=dev webpack-dev-server --progress  --config ./webpack.dev.js --open",
-        "build:babel": "rimraf es/* && ./node_modules/.bin/babel src --copy-files  --extensions .js --out-dir es/module && ncp ./src/ui.js es/dist.js && ncp README.md es/README.md && ncp package.publish.json es/package.json",
+        "build:babel": "rimraf es/* && ./node_modules/.bin/babel src --copy-files  --extensions .js --out-dir es/module && ncp ./src/ui.js es/dist.js && ncp README.md es/README.md",
         "build:dev": "npm run build:dev:esm && npm run build:dev:cjs && npm run build:umd && npm run build:css",
         "build:prod": "npm run build:esm",
         "build:css": "cd scripts && gulp compile",
