--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
         "purifycss-webpack": "^0.7.0",
         "react-app-rewired": "^2.1.8",
         "react-hot-loader": "^4.13.0",
+        "rollup": "^2.79.1",
         "rollup-plugin-babel": "^4.4.0",
         "rollup-plugin-commonjs": "^10.1.0",
         "rollup-plugin-filesize": "^9.1.2",
@@ -187,7 +188,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.1",
         "react-draggable": "^4.4.5",
-        "react-grid-layout": "^1.3.4",
+        "react-grid-layout": "^1.4.3",
         "react-i18next": "^11.7.3",
         "react-multi-select-component": "^4.3.4",
         "react-router": "^5.2.0",
