--- a/package.json
+++ b/package.json
@@ -188,7 +188,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.1",
         "react-draggable": "^4.4.5",
-        "react-grid-layout": "^1.4.3",
+        "react-grid-layout": "1.3.4",
         "react-i18next": "^11.7.3",
         "react-multi-select-component": "^4.3.4",
         "react-router": "^5.2.0",
@@ -207,6 +207,8 @@
         "thoughtware-security-ui": "^1.0.2",
         "thoughtware-slate-ui": "^1.0.2",
         "thoughtware-todotask-ui": "^1.0.2",
-        "thoughtware-user-ui": "^1.0.2"
+        "thoughtware-user-ui": "^1.0.2",
+        "tiklab-privilege-ui": "^1.0.2",
+        "tiklab-user-ui": "^1.0.2"
     }
 }
