--- a/package.json
+++ b/package.json
@@ -28,6 +28,19 @@
         "registry": "http://172.13.1.24:8080/repository/npm-hosted"
     },
     "peerDependencies": {
+        "@babel/cli": "^7.12.1",
+        "@babel/core": "^7.12.3",
+        "@babel/plugin-proposal-class-properties": "^7.12.1",
+        "@babel/plugin-proposal-decorators": "^7.12.1",
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+        "@babel/plugin-transform-arrow-functions": "^7.12.1",
+        "@babel/plugin-transform-react-jsx": "^7.12.5",
+        "@babel/plugin-transform-react-jsx-source": "^7.14.5",
+        "@babel/plugin-transform-runtime": "^7.12.1",
+        "@babel/preset-env": "^7.7.4",
+        "@babel/preset-es2015": "^7.0.0-beta.53",
+        "@babel/preset-react": "^7.12.1",
+        "@babel/runtime": "^7.12.5",
         "@ant-design/icons": "4.3.0",
         "@antv/g6": "^4.1.4",
         "@antv/x6": "^1.12.5",
@@ -113,7 +126,7 @@
         "json-server": "^0.16.3",
         "less": "^4.1.3",
         "less-loader": "^7.2.1",
-        "mini-css-extract-plugin": "^1.3.1",
+        "mini-css-extract-plugin": "^1.6.2",
         "mockjs": "^1.1.0",
         "ncp": "^2.0.0",
         "node-forge": "*",
@@ -163,7 +176,10 @@
         "webpack-dev-server": "^3.11.0",
         "webpack-merge": "^5.4.0",
         "webpack-parallel-uglify-plugin": "^1.1.2",
-        "yarn": "^1.22.17"
+        "yarn": "^1.22.17",
+        "axios": "^0.21.0",
+        "echarts": "^5.4.2",
+        "html2canvas": "^1.4.1"
     },
     "dependencies": {
         "@ant-design/icons": "4.3.0",
