--- a/package.json
+++ b/package.json
@@ -185,10 +185,15 @@
         "@antv/x6": "^1.12.5",
         "@antv/x6-react-components": "^1.1.1",
         "@babel/plugin-syntax-jsx": "^7.18.6",
+        "@dnd-kit/core": "^6.1.0",
+        "@dnd-kit/modifiers": "^7.0.0",
+        "@dnd-kit/sortable": "^8.0.0",
+        "@dnd-kit/utilities": "^3.2.2",
         "@province-city-china/level": "^7.1.3",
         "@rollup/plugin-url": "^8.0.1",
         "antd": "4.15.2",
         "axios": "^0.21.0",
+        "dnd-kit": "0.0.2",
         "echarts": "^5.4.2",
         "html2canvas": "^1.4.1",
         "i18next": "^19.8.4",
