--- a/package.json
+++ b/package.json
@@ -204,6 +204,8 @@
         "mobx-react": "^6.2.2",
         "prod": "^1.0.1",
         "react": "^17.0.2",
+        "react-dnd": "^16.0.1",
+        "react-dnd-html5-backend": "^16.0.1",
         "react-dom": "^17.0.1",
         "react-draggable": "^4.4.5",
         "react-grid-layout": "1.3.4",
