--- a/package.json
+++ b/package.json
@@ -218,6 +218,7 @@
         "react-router-dom": "^5.2.0",
         "rollup-plugin-copy": "^3.4.0",
         "thoughtware-core-ui": "^1.0.2",
+        "thoughtware-eam-cloud-ui": "^1.0.1",
         "thoughtware-eam-ui": "^1.0.2",
         "thoughtware-flow-ui": "^1.0.2",
         "thoughtware-form-ui": "^1.0.2",
@@ -225,6 +226,7 @@
         "thoughtware-licence-ui": "^1.0.2",
         "thoughtware-message-ui": "^1.0.3",
         "thoughtware-privilege-ui": "^1.0.2",
+        "thoughtware-security-cloud-ui": "^1.0.0",
         "thoughtware-security-ui": "^1.0.2",
         "thoughtware-slate-ui": "^1.0.2",
         "thoughtware-user-extension-ui": "^1.0.0",
