--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
         "@babel/preset-react": "^7.12.1",
         "@babel/runtime": "^7.12.5",
         "@ant-design/icons": "4.3.0",
-        "@antv/g6": "^4.1.4",
-        "@antv/x6": "^1.12.5",
+        "@antv/x6": "^1.34.13",
         "@antv/x6-react-components": "^1.1.1",
         "@province-city-china/level": "^7.1.3",
         "antd": "4.15.2",
@@ -77,7 +76,13 @@
         "thoughtware-licence-cloud-ui": "^1.0.0",
         "slate": "0.100.0",
         "slate-history": "0.100.0",
-        "slate-react": "0.100.0"
+        "slate-react": "0.100.0",
+        "jspdf": "^2.5.1",
+        "react-dnd": "^16.0.1",
+        "react-dnd-html5-backend": "^16.0.1",
+        "react-draggable": "^4.4.5",
+        "react-grid-layout": "1.3.4",
+        "html2canvas": "^1.4.1"
     },
     "devDependencies": {
         "@babel/cli": "^7.12.1",
@@ -183,8 +188,7 @@
     },
     "dependencies": {
         "@ant-design/icons": "4.3.0",
-        "@antv/g6": "^4.1.4",
-        "@antv/x6": "^1.12.5",
+        "@antv/x6": "^1.34.13",
         "@antv/x6-react-components": "^1.1.1",
         "@babel/plugin-syntax-jsx": "^7.18.6",
         "@dnd-kit/core": "^6.1.0",
